Suppress Netty native warnings in tests